Sun May 29 17:31:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_ts_default.mpb:
          Specify some more opendds ts flags

Sun May 29 17:22:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver.mpc:
        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender.mpc:
        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender.mpc:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component.mpc:
          These components use ndds specific features

Fri May 27 12:44:32 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Resolved errors in builds with other DDS vendors then ndds

Thu May 26 20:29:07 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/DAnCE/Progressive_Deployments/run_test.pl:
          ../lib is not necessary; it doesn't even exist.

Thu May 26 07:13:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Fixed compile error

Wed May 25 10:56:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
          Fixed argument not used warnings

Tue May 24 18:52:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
          Improved portability

Tue May 24 11:17:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver.mpc: